--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "keywords": [],
     "author": "",
     "license": "MIT",
-    "dependencies": {
+    "devDependencies": {
         "vite": "^1.0.0-rc.4"
     }
 }
