--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
     "description": "",
     "main": "src/Game.js",
     "scripts": {
-        "dev": "vite",
+        "serve": "vite serve",
         "build": "vite build"
     },
     "keywords": [],
     "author": "",
     "license": "MIT",
     "devDependencies": {
+        "koa-mount": "^4.0.0",
+        "koa-static": "^5.0.0",
         "vite": "^1.0.0-rc.4"
     }
 }
