--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "license": "MIT",
     "devDependencies": {
+        "eslint": "^7.9.0",
         "koa-mount": "^4.0.0",
         "koa-static": "^5.0.0",
         "vite": "^1.0.0-rc.4"
