--- a/package.json
+++ b/package.json
@@ -1,23 +1,7 @@
 {
-    "name": "@dattn/square-tomato",
-    "version": "0.1.0-dev",
-    "description": "Square Tomate Game",
-    "keywords": [],
-    "author": "Daniel Duton <daniel@duton.lu> (https://github.com/dattn)",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/dattn/square-tomato.git"
-    },
-    "license": "MIT",
-    "main": "src/Game.js",
-    "scripts": {
-        "serve": "vite serve",
-        "build": "vite build"
-    },
+    "name": "@dattn/square-tomato-dev",
+    "private": true,
     "devDependencies": {
-        "eslint": "^7.9.0",
-        "koa-mount": "^4.0.0",
-        "koa-static": "^5.0.0",
-        "vite": "^1.0.0-rc.4"
+        "lerna": "^3.18.3"
     }
 }
