--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@dattn/square-tomato-engine",
     "version": "0.1.0-dev",
-    "description": "Square Tomate Game",
+    "description": "Square Tomato Game",
     "keywords": [],
     "author": "Daniel Duton <daniel@duton.lu> (https://github.com/dattn)",
     "repository": {
