--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -16,7 +16,8 @@
         "dev": "nodemon src/app.js"
     },
     "dependencies": {
-        "koa": "^2.13.0"
+        "koa": "^2.13.0",
+        "ws": "^7.3.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.4"
