--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -17,6 +17,8 @@
     },
     "dependencies": {
         "koa": "^2.13.0",
+        "koa-mount": "^4.0.0",
+        "koa-static": "^5.0.0",
         "ws": "^7.3.1"
     },
     "devDependencies": {
